--- a/config_prd.yaml
+++ b/config_prd.yaml
@@ -1,7 +1,7 @@
-db_dev_creds: C:/Users/nipper/cz_rds_store/branches/cz_gdrive/dev/woj_gids_creds.RDS
 log_file: C:/Users/nipper/Logs/radiologik_sched_keep_alive.log
 email_from: cz.teamservice@gmail.com
 email_to_A: lcavdakker@gmail.com
 email_to_B: sem@concertzender.nl
 email_auth_path: cz-studiomails.json
 log_slug: rls_ka
+keep_alive_log_uzm: //UITZENDMAC-2/macOS/Users/tech_1/Documents/Salsa/scripts/logs
